Ansible playbook adaptation

--- a/raw.yml
+++ b/raw.yml
@@ -13,7 +13,7 @@
   tasks:
     - block:
         - include_role:
-            name: '{{ roleinputvar }}'
+            name: "{{ roleinputvar }}"
           loop:
             - install-packages
             - download-iso
@@ -39,7 +39,7 @@
             loop_var: roleinputvar
       rescue:
         - include_role:
-            name: '{{ roleinputvar }}'
+            name: "{{ roleinputvar }}"
           loop:
             - unmount-pre
             - unmount-all
