--- a/qemu.yml
+++ b/qemu.yml
@@ -5,7 +5,7 @@
   vars:
     vyos_platform: QEMU
     vyos_format: qcow2
-    vyos_qemu_img: "/tmp/vyos-{{ vyos_version }}{{ ci_tag  | default() }}-{{vyos_disk_size}}G-qemu.qcow2"
+    vyos_qemu_img: "/tmp/vyos-{{ vyos_version }}{{ ci_tag  | default() }}-{{ vyos_disk_size }}G-qemu.qcow2"
     vyos_output_img: "{{ vyos_qemu_img }}"
     cloud_init: "false"
     cloud_init_ds_string: "{{ cloud_init_ds | default('NoCloud,ConfigDrive,None') }}"
@@ -13,7 +13,7 @@
   tasks:
     - block:
         - include_role:
-            name: '{{ roleinputvar }}'
+            name: "{{ roleinputvar }}"
           loop:
             - install-packages
             - download-iso
@@ -29,7 +29,6 @@
             - install-cloud-init-wrapper
             - install-guest-agent-wrapper
             - install-custom-packages-wrapper
-            - copy-custom-files
             - fstrim
             - unmount-pre
             - create-pxe-archive
@@ -41,7 +40,7 @@
             loop_var: roleinputvar
       rescue:
         - include_role:
-            name: '{{ roleinputvar }}'
+            name: "{{ roleinputvar }}"
           loop:
             - unmount-pre
             - unmount-all
