--- a/roles/install-cloud-init/tasks/main.yml
+++ b/roles/install-cloud-init/tasks/main.yml
@@ -11,6 +11,11 @@
   template:
     src: "templates/debian.list.j2"
     dest: "{{ vyos_install_root }}/etc/apt/sources.list.d/debian.list"
+- name: Add VyOS unified repository keys
+  become: true
+  shell: |
+    wget -qO - https://aws.unified-repo.vyos.net/dev_public.key | chroot {{ vyos_install_root }} apt-key add -
+    wget -qO - https://aws.unified-repo.vyos.net/prod_public.key | chroot {{ vyos_install_root }} apt-key add -
 - name: backup resolv.conf
   become: true
   command: mv {{ vyos_install_root }}/etc/resolv.conf /tmp/resolv.conf
@@ -22,9 +27,10 @@
 - name: apt-get update
   become: true
   command: chroot {{ vyos_install_root }} apt-get update
+
 - name: Install cloud-init
   become: true
-  command: chroot {{ vyos_install_root }} apt-get -t {{ vyos_branch | default('current') }} install -y --force-yes cloud-init cloud-utils ifupdown
+  command: chroot {{ vyos_install_root }} apt-get install -y --force-yes cloud-init cloud-utils ifupdown
 - name: apt-get clean
   become: true
   command: chroot {{ vyos_install_root }} apt-get clean
@@ -36,6 +42,10 @@
   file:
     path: "{{ vyos_install_root }}/etc/apt/sources.list.d/debian.list"
     state: absent
+- name: Remove VyOS unified repository dev key
+  become: true
+  shell: |
+    chroot {{ vyos_install_root }} apt-key del '473C 3AC1 209B 5337 4085  855A 4F5F FD45 95F7 302D'
 - name: Create cfg.d dir
   become: true
   file:
