--- a/roles/mount-iso/tasks/main.yml
+++ b/roles/mount-iso/tasks/main.yml
@@ -12,7 +12,7 @@
   command: md5sum -c md5sum.txt
   args:
     chdir: "{{ vyos_cd_root }}"
-  changed_when: False
+  changed_when: no
 
 - name: Mount squashfs image from ISO
   become: true
