--- a/qemu.yml
+++ b/qemu.yml
@@ -5,7 +5,7 @@
   vars:
     vyos_platform: QEMU
     vyos_format: qcow2
-    vyos_qemu_img: "/tmp/vyos-{{ vyos_version }}{{ ci_tag  | default() }}-{{vyos_disk_size}}G-qemu.qcow2"
+    vyos_qemu_img: "/tmp/vyos-{{ vyos_version }}{{ ci_tag  | default() }}-{{ vyos_disk_size }}G-qemu.qcow2"
     vyos_output_img: "{{ vyos_qemu_img }}"
     cloud_init: "false"
     cloud_init_ds_string: "{{ cloud_init_ds | default('NoCloud,ConfigDrive,None') }}"
@@ -15,8 +15,6 @@
         - include_role:
             name: "{{ roleinputvar }}"
           loop:
-            - unmount-pre
-            - unmount-all
             - install-packages
             - download-iso
             - mount-iso
@@ -40,7 +38,7 @@
             - release
           loop_control:
             loop_var: roleinputvar
-      always:
+      rescue:
         - include_role:
             name: "{{ roleinputvar }}"
           loop:
