--- a/roles/mount-iso/tasks/main.yml
+++ b/roles/mount-iso/tasks/main.yml
@@ -24,4 +24,6 @@
     state: mounted
     boot: no
 
-- meta: end_play
+- name: Trust all apt repositories
+  become: true
+  command: cat /dev/null > {{ vyos_install_root }}/etc/apt/sources.list
