--- a/roles/mount-root-fs/tasks/main.yml
+++ b/roles/mount-root-fs/tasks/main.yml
@@ -38,6 +38,10 @@
     state: mounted
     boot: no
 
+- name: Wait for mounting...
+  pause:
+    seconds: 10
+
 - name: Clear default apt repositories
   become: true
   command: cat /dev/null > {{ vyos_install_root }}/etc/apt/sources.list
