--- a/qemu.yml
+++ b/qemu.yml
@@ -15,6 +15,8 @@
         - include_role:
             name: "{{ roleinputvar }}"
           loop:
+            - unmount-pre
+            - unmount-all
             - install-packages
             - download-iso
             - mount-iso
