--- a/roles/install-cloud-init/tasks/main.yml
+++ b/roles/install-cloud-init/tasks/main.yml
@@ -6,6 +6,10 @@
   set_fact:
     vyos_branch: "equuleus"
   when: vyos_version is regex("^1\.3.*$")
+- name: Set VyOS branch name sagitta
+  set_fact:
+    vyos_branch: "sagitta"
+  when: vyos_version is regex("^1\.4.*$")
 - name: Put debian.list
   become: true
   template:
