--- a/roles/mount-root-fs/tasks/main.yml
+++ b/roles/mount-root-fs/tasks/main.yml
@@ -6,6 +6,7 @@
     fstype: squashfs
     opts: loop,ro
     state: mounted
+    fstab: /tmp/fstab
     boot: no
 
 - name: Set rw directory for overlayfs
@@ -36,6 +37,7 @@
     fstype: overlay
     opts: "noatime,upperdir={{ vyos_rw_dir }},lowerdir={{ vyos_read_root }},workdir={{ vyos_work_dir }}"
     state: mounted
+    fstab: /tmp/fstab
     boot: no
 
 - name: Clear default apt repositories
